--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=Z_A
-sonar.projectName=A
+sonar.projectKey=deansadaoka_CSC308FirstProject
+sonar.projectName=CSC308FirstProject
 
 # =====================================================
 #   Meta-data for the project
@@ -17,7 +17,7 @@ sonar.links.issue=https://github.com/Z/A/issues
 
 sonar.host.url=https://sonarcloud.io
 sonar.organization=Z-github
-sonar.login=TOKEN
+sonar.login=2bc9ea909565b3309319161703b53a45115dc1a7
 sonar.sources=src
 sonar.language=java
 
